Make fields on Give page not required, and handle key events in Selects
Keypress in select scrolls to next item with that initial
Pressing Return selects topmost item

--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -19,7 +19,7 @@
                         <label>
                             Title
                             <span class="invalid-message">{model.validationMessage('Title')}</span>
-                            <input type="text" name="Title" class="form-control" required
+                            <input type="text" name="Title" class="form-control"
                             placeholder="Mr./Mrs./Dr./Ms./..."
                              />
                         </label>
@@ -46,12 +46,12 @@
                         <label>
                             Phone
                             <span class="invalid-message">{model.validationMessage('Phone')}</span>
-                            <input type="text" name="Phone" class="form-control" required />
+                            <input type="text" name="Phone" class="form-control" />
                         </label>
                         <label>
                             Phone Type
                             <span class="invalid-message">{model.validationMessage('Phone_Type')}</span>
-                            <input type="text" name="Phone_Type" class="form-control" required
+                            <input type="text" name="Phone_Type" class="form-control"
                             placeholder="Work/Home/Cell/..." />
                         </label>
                     </div>
@@ -59,7 +59,7 @@
                         <label>
                             Address
                             <span class="invalid-message">{model.validationMessage('Mailing_Address')}</span>
-                            <input type="text" name="Mailing_Address" class="form-control" required />
+                            <input type="text" name="Mailing_Address" class="form-control" />
                         </label>
 
                         <label>
@@ -70,14 +70,14 @@
                         <label>
                             City
                             <span class="invalid-message">{model.validationMessage('Mailing_City')}</span>
-                            <input type="text" name="Mailing_City" class="form-control" required />
+                            <input type="text" name="Mailing_City" class="form-control" />
                         </label>
 
                         <label>
                             State
                             <span class="invalid-message">{model.validationMessage('Mailing_State')}</span>
                             <div skip="true"></div>
-                            <select name="Mailing_State" class="form-control" required>
+                            <select name="Mailing_State" class="form-control">
                                 <option value="--">Not Applicable</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -157,7 +157,7 @@
                         <label>
                             Zip Code
                             <span class="invalid-message">{model.validationMessage('Mailing_Zip')}</span>
-                            <input type="text" name="Mailing_Zip" class="form-control" required />
+                            <input type="text" name="Mailing_Zip" class="form-control" />
                         </label>
 
                         <label>
