--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -5,11 +5,11 @@
             <a class="btn inverted" href="/give?student">Give Now</a>
         </div>
         <div class="multi-button">
-            <a class="btn inverted" href="/give/form?amount=5">Give $5</a>
-            <a class="btn inverted" href="/give/form?amount=10">Give $10</a>
-            <a class="btn inverted" href="/give/form?amount=25">Give $25</a>
-            <a class="btn inverted" href="/give/form?amount=50">Give $50</a>
-            <a class="btn inverted" href="/give?student&amount">Give Other Amount</a>
+            <a class="btn inverted" href="/give" data-amount="5">Give $5</a>
+            <a class="btn inverted" href="/give" data-amount="10">Give $10</a>
+            <a class="btn inverted" href="/give" data-amount="25">Give $25</a>
+            <a class="btn inverted" href="/give" data-amount="50">Give $50</a>
+            <a class="btn inverted" href="/give"  data-amount="?">Give Other Amount</a>
         </div>
     </div>
 </template>
