--- a/src/app/pages/details/resource/resource.html
+++ b/src/app/pages/details/resource/resource.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div>
         <h4>{model.resource_heading}</h4>
-        <resource-description if="model.resource_description"></resource-description>
+        <resource-description if="model.resource_description" data-html="resource_description"></resource-description>
     </div>
     <span class="link-and-lock">
         <a href="{model.linkUrl}" data-local="true">{model.link_text}</a>
