Add optional special None behavior to multi-select
Required multiselect prompt is now “Please select…”
if select has `data-require-none`, and a None item with value “”, the
None item clears other items, and other items clear None

--- a/src/app/components/select/select.html
+++ b/src/app/components/select/select.html
@@ -8,7 +8,7 @@
                 </li>
             <else>
                 <li>
-                    <span class="label none">None</span>
+                    <span class="label none">{model.noneMessage}</span>
                 </li>
             </if>
         </ul>
