--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -130,7 +130,8 @@
                         <span class="select-instructions">You may select more than one.</span>
                         <span class="invalid-message">{model.validationMessage('00NU00000055spm')}</span>
                         <div skip="true"></div>
-                        <select multiple name="00NU00000055spm">
+                        <select multiple name="00NU00000055spm" data-require-none required>
+                            <option value="">None</option>
                             <option value="Online homework partners">Online homework partners</option>
                             <option value="Adaptive courseware partners">Adaptive courseware partners</option>
                             <option value="Customization tool partners">Customization tool partners</option>
