Details page bug fixes
Fix extra instructions for when there are no Instructor Resources
Check for no table of contents

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -93,7 +93,7 @@
                     <h3>OpenStax Instructor Resources</h3>
                     <p>
                         Access these free resources with your verified instructor account.
-                        <span id="extra-instructions"></span>
+                        <span data-html="extraInstructions"></span>
                     </p>
                     <div id="instructor-resources" class="resource" skip="true"></div>
                 </div>
