FAQ page fixups
Prevent sidebar box from wrapping
Add hanging indent to questions
Insert subhead paragraph as HTML

--- a/src/app/pages/faq/faq.html
+++ b/src/app/pages/faq/faq.html
@@ -2,7 +2,7 @@
     <div if="model.heading" class="hero">
         <div class="boxed">
             <h1>{model.heading}</h1>
-            <p>{model.subhead}</p>
+            <p data-html="subhead"></p>
         </div>
     </div>
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
@@ -17,8 +17,8 @@
             <h2 class="in-color">Contact Us</h2>
             <div>
                 <p>Have more questions? Contact our customer service team:</p>
-                <div><i class="fa fa-envelope"></i><a class="in-color" href="mailto:support@openstax.org">support@openstax.org</a></div>
-                <div><i class="fa fa-phone"></i><span class="in-color">713 348 5012</span></div>
+                <div class="one-line"><i class="fa fa-envelope"></i><a class="in-color" href="mailto:support@openstax.org">support@openstax.org</a></div>
+                <div class="one-line"><i class="fa fa-phone"></i><span class="in-color">713 348 5012</span></div>
             </div>
         </div>
     </div>
