--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -445,7 +445,7 @@
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <div if="!model.isThanks" class="boxed">
+        <div class="boxed">
             <h2>{model.otherPaymentHeading}</h2>
             <hr />
             <div class="row">
