--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -11,7 +11,7 @@
 
     .hero {
         color: color(neutral-lightest);
-        padding: 6rem 0;
+        padding: 8em 0;
         position: relative;
 
         .background-image,
@@ -136,6 +136,11 @@
                 font-weight: normal;
             }
         }
+    }
+
+    .fb-share-button {
+        margin-top: 1em;
+        transform: scale(2.5);
     }
 
     hr {
