Fix book cover placement
Turn off flex wrap at desktop size

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -103,7 +103,7 @@
         }
 
         @include desktop {
-            flex-flow: row wrap;
+            flex-flow: row nowrap;
         }
     }
 
