fix get-this-title menu scrolling
add toggleFixedClass() code to get-this-title menu
to prevent scrolling past footer

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </section>
-            <section class="floating-menu">
+            <section class="floating-menu {model.bottom}">
                 <div class="box">
                 <h2>Get this title</h2>
                 <div class="get-this-book" skip="true"></div>
