--- a/src/app/pages/higher-ed/higher-ed.html
+++ b/src/app/pages/higher-ed/higher-ed.html
@@ -3,7 +3,7 @@
         <div class="hero w-cards">
             <div class="container-wrap">
                 <div class="student"></div>
-                    <div class="overlay">
+                    <div class="overlay hide-until-loaded {model.loaded}">
                         <div class="text-block">
                             <h1 class="header">{model.intro_heading}</h1>
                             <p class="blurb"></p>
@@ -14,10 +14,10 @@
             <div class="square-2"></div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
-        <div class="quote-buckets">
+        <div class="quote-buckets hide-until-loaded {model.loaded}">
             <div class="boxed" skip="true"></div>
         </div>
-        <div id="getting-started" class="getting-started">
+        <div id="getting-started" class="getting-started hide-until-loaded {model.loaded}">
             <div class="container boxed">
                 <div class="header">{model.get_started_heading}</div>
                 <ol class="steps">
