Enable logout in IOS9

--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -117,14 +117,8 @@ $button-size: 2.8rem;
                 display: none;
             }
 
-            &.dropdown.open > a {
-                display: block;
-                padding-left: 100rem;
-            }
-        }
-
-        .dropdown-menu {
-            &.open {
+            &.dropdown.open > a,
+            .dropdown-menu.open {
                 display: block;
                 padding-left: 100rem;
             }
