--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -3,7 +3,7 @@
         <form class="form-horizontal" role="form" method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
             <div class="text-content">
                 <div class="text-content subhead">
-                    {`Please enter your donor information and click "Continue" to be taken to the secure payment site.`}
+                    {`Please enter your information and click "Continue" to be taken to the secure payment site. OpenStax is based at Rice, but your donation will go directly to OpenStax. Once your payment is submitted, you will receive payment confirmation and a gift receipt from Rice University.`}
                 </div>
                 <input name="SUCCESS_LINK" type="hidden" value="{model.thankYouUrl}" />
                 <input type="hidden" name="UPAY_SITE_ID" value="106" />
