fix mobile menu hamburger button position

--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -36,3 +36,6 @@
         </ul>
     </li>
 </ul>
+<button class="expand" type="button" role="button" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
+  <span></span>
+</button>
