--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -3,7 +3,7 @@
         <div class="hero">
             <div class="container boxed">
                 <h1>{model.heading}</h1>
-                <p>{model.description}</p>
+                <div data-html="description"></div>
             </div>
         </div>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
