Add newsletter signup link to footer

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -22,6 +22,9 @@
                 <li if="model.pressKitData">
                     <a href="{model.pressKitData.file}">Press Kit</a>
                 </li>
+                <li>
+                    <a href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Newsletter</a>
+                </li>
             </ul>
 
             <p>
