fix dropdown on desktop screen size

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -31,7 +31,13 @@
         }
 
         @at-root :not(.active)#{&} {
-            position: relative;
+            @include phone {
+                position: relative;
+            }
+
+            @include tablet {
+                position: relative;
+            }
         }
     }
 
