fix banner animations
change banner parallax animations to animate using translate instead of top/left

--- a/src/app/components/shell/header/upper-menu/upper-menu.scss
+++ b/src/app/components/shell/header/upper-menu/upper-menu.scss
@@ -70,6 +70,7 @@
                     display: flex;
                     height: 0;
                     opacity: 0;
+                    visibility: hidden;
                     width: 0;
                 }
             }
@@ -85,6 +86,7 @@
                     padding: 1rem;
                     position: absolute;
                     transform: translateX(-30%);
+                    visibility: visible;
                     width: auto;
                 }
             }
