fix banner animations (#656)
* fix banner animations

change banner parallax animations to animate using translate instead of top/left

* fix scroll error from parallaxBanner() when navigating off the home page

--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -37,6 +37,7 @@ $button-size: 2.8rem;
 
         @include desktop {
             height: 6rem;
+            transform: translate3d(0, 0, 0);
         }
     }
 
@@ -65,10 +66,13 @@ $button-size: 2.8rem;
     @at-root .fixed#{&} {
         > .nav {
             background-color: color(neutral-lightest);
-            position: fixed;
-            top: -5rem;
-            transform: translateY(5rem);
-            transition: all 0.15s;
+
+            @include desktop {
+                position: fixed;
+                top: -6rem;
+                transform: translate3d(0, 6rem, 0);
+                transition: transform 0.3s 0.5s ease-in-out;
+            }
         }
     }
 
