move parallaxBanner() and parallaxBannerUpdate() to onDataLoaded(); fix padding of home page sections

--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -251,7 +251,7 @@
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: 100% auto;
-        bottom: 0;
+        bottom: -1rem;
         height: 105%;
         right: calc(-12rem + 12%);
         width: calc(15rem + 30%);
